--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -131,12 +131,10 @@ CurrentScalingGridSize=4
 CurrentPosGridSize=1
 
 [EditorStartup]
-LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
+LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_base.hanging_pot_base
-OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_rope.hanging_pot_rope
+CleanShutdown=False
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -173,7 +171,7 @@ WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition
 Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
+Object="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -2376,6 +2374,7 @@ Light.WorldPartition=True
 Light.Actor=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/maple_tree01.maple_tree01;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_rope.hanging_pot_rope;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_base.hanging_pot_base;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot.hanging_pot;
@@ -2395,7 +2394,6 @@ RecentlyPlaced=/Game/Megascans/3D_Assets/Small_Concrete_Planter_Pack_vddifdqiw/S
 RecentlyPlaced=/Game/Megascans/3D_Plants/Money_Plant_uchmfdyia/T_Money_Plant_uchmfdyia_Billboard_D.T_Money_Plant_uchmfdyia_Billboard_D;
 RecentlyPlaced=/Game/Megascans/3D_Plants/Money_Plant_uchmfdyia/S_Money_Plant_uchmfdyia_Var1_lod1.S_Money_Plant_uchmfdyia_Var1_lod1;
 RecentlyPlaced=/Game/Megascans/3D_Assets/Worn_Plaster_Pot_ubylbdhiw/S_Worn_Plaster_Pot_ubylbdhiw_lod3.S_Worn_Plaster_Pot_ubylbdhiw_lod3;
-RecentlyPlaced=/Game/Megascans/3D_Assets/Flower_Pot_tmrlbdaiw/S_Flower_Pot_tmrlbdaiw_lod0.S_Flower_Pot_tmrlbdaiw_lod0;
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -2538,26 +2536,26 @@ WorldPartitionRuntimeSpatialHash=
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_rope
-MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/NewMaterial
-MRUItem2=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem3=/Game/OurProject/Maps/bedroom_scene/assets/books/red/closed_book_initialShadingGroup_BaseColor
-MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/books/green/closed_book_initialShadingGroup_BaseColor
-MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_initialShadingGroup_BaseColor1
-MRUItem6=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_brown
-MRUItem7=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red
-MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_initialShadingGroup_BaseColor
-MRUItem9=/Game/FirstPerson/Maps/_GENERATED/linch/M_Rectangle_C1164903_MI_English_Walnut_Parquet_udlxbgtl_4K_DCA5999346048737985276B0C993F4F8
-MRUItem10=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_green
-MRUItem11=/Game/FirstPerson/Maps/_GENERATED/linch/Rectangle_C1164903
-MRUItem12=/Game/Megascans/3D_Plants/Money_Plant_uchmfdyia/S_Money_Plant_uchmfdyia_Var6_lod1
-MRUItem13=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial1_4E7A8C6A4D10B029EAECAB95CDBE3C1F
-MRUItem14=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial_4E7A8C6A4D10B029EAECAB95CDBE3C1F
-MRUItem15=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial2_4E7A8C6A4D10B029EAECAB95CDBE3C1F
-MRUItem16=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial2
-MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial1
-MRUItem18=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial
-MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial1_074773F14DF4F383E391579B3EFC7966
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_rope
+MRUItem2=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/NewMaterial
+MRUItem3=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/books/red/closed_book_initialShadingGroup_BaseColor
+MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/books/green/closed_book_initialShadingGroup_BaseColor
+MRUItem6=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_initialShadingGroup_BaseColor1
+MRUItem7=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_brown
+MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red
+MRUItem9=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_initialShadingGroup_BaseColor
+MRUItem10=/Game/FirstPerson/Maps/_GENERATED/linch/M_Rectangle_C1164903_MI_English_Walnut_Parquet_udlxbgtl_4K_DCA5999346048737985276B0C993F4F8
+MRUItem11=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_green
+MRUItem12=/Game/FirstPerson/Maps/_GENERATED/linch/Rectangle_C1164903
+MRUItem13=/Game/Megascans/3D_Plants/Money_Plant_uchmfdyia/S_Money_Plant_uchmfdyia_Var6_lod1
+MRUItem14=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial1_4E7A8C6A4D10B029EAECAB95CDBE3C1F
+MRUItem15=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial_4E7A8C6A4D10B029EAECAB95CDBE3C1F
+MRUItem16=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial2_4E7A8C6A4D10B029EAECAB95CDBE3C1F
+MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial2
+MRUItem18=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial1
+MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
@@ -2708,8 +2706,8 @@ PrimType=1
 PreserveScaleRatio=True
 
 [MRU]
-MRUItem0=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem1=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem1=/Game/FirstPerson/Maps/FirstPersonMap
 MRUItem2=/Game/OurProject/Maps/bedroom_scene/bedroom_scene
 MRUItem3=/Game/StarterContent/Maps/StarterMap
 MRUItem4=/Game/OurProject/Maps/CabinInWoods
