--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -171,7 +171,7 @@ WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition
 Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -2398,6 +2398,7 @@ RecentlyPlaced=/Game/Megascans/3D_Assets/Worn_Plaster_Pot_ubylbdhiw/S_Worn_Plast
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,
@@ -2536,26 +2537,26 @@ WorldPartitionRuntimeSpatialHash=
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_rope
-MRUItem2=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/NewMaterial
-MRUItem3=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/books/red/closed_book_initialShadingGroup_BaseColor
-MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/books/green/closed_book_initialShadingGroup_BaseColor
-MRUItem6=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_initialShadingGroup_BaseColor1
-MRUItem7=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_brown
-MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red
-MRUItem9=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_initialShadingGroup_BaseColor
-MRUItem10=/Game/FirstPerson/Maps/_GENERATED/linch/M_Rectangle_C1164903_MI_English_Walnut_Parquet_udlxbgtl_4K_DCA5999346048737985276B0C993F4F8
-MRUItem11=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_green
-MRUItem12=/Game/FirstPerson/Maps/_GENERATED/linch/Rectangle_C1164903
-MRUItem13=/Game/Megascans/3D_Plants/Money_Plant_uchmfdyia/S_Money_Plant_uchmfdyia_Var6_lod1
-MRUItem14=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial1_4E7A8C6A4D10B029EAECAB95CDBE3C1F
-MRUItem15=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial_4E7A8C6A4D10B029EAECAB95CDBE3C1F
-MRUItem16=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial2_4E7A8C6A4D10B029EAECAB95CDBE3C1F
-MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial2
-MRUItem18=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial1
-MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial
+MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/trees/treemat
+MRUItem1=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem2=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_rope
+MRUItem3=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/NewMaterial
+MRUItem4=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/books/red/closed_book_initialShadingGroup_BaseColor
+MRUItem6=/Game/OurProject/Maps/bedroom_scene/assets/books/green/closed_book_initialShadingGroup_BaseColor
+MRUItem7=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_initialShadingGroup_BaseColor1
+MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_brown
+MRUItem9=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red
+MRUItem10=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_initialShadingGroup_BaseColor
+MRUItem11=/Game/FirstPerson/Maps/_GENERATED/linch/M_Rectangle_C1164903_MI_English_Walnut_Parquet_udlxbgtl_4K_DCA5999346048737985276B0C993F4F8
+MRUItem12=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_green
+MRUItem13=/Game/FirstPerson/Maps/_GENERATED/linch/Rectangle_C1164903
+MRUItem14=/Game/Megascans/3D_Plants/Money_Plant_uchmfdyia/S_Money_Plant_uchmfdyia_Var6_lod1
+MRUItem15=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial1_4E7A8C6A4D10B029EAECAB95CDBE3C1F
+MRUItem16=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial_4E7A8C6A4D10B029EAECAB95CDBE3C1F
+MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial2_4E7A8C6A4D10B029EAECAB95CDBE3C1F
+MRUItem18=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial2
+MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial1
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
