--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -131,10 +131,11 @@ CurrentScalingGridSize=4
 CurrentPosGridSize=1
 
 [EditorStartup]
-LastLevel=/Game/OurProject/Maps/Forest_Scene/ForestScene
+LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_base.hanging_pot_base
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -171,7 +172,7 @@ WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition
 Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
+Object="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -184,7 +185,7 @@ Actor="\"Object\" "
 MaterialEditorInstanceConstant="\"Object\" \"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
-MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
+MaterialInterface="\"Object\" "
 PreviewMaterial="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 MaterialExpressionMaterialFunctionCall="\"Object\" "
@@ -2374,9 +2375,9 @@ Light.WorldPartition=True
 Light.Actor=True
 
 [PlacementMode]
-RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/maple_tree01.maple_tree01;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_rope.hanging_pot_rope;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_base.hanging_pot_base;
+RecentlyPlaced=/Game/OurProject/Maps/Forest_Scene/Assets/trees/maple_tree01.maple_tree01;
 RecentlyPlaced=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot.hanging_pot;
 RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
 RecentlyPlaced=/Game/Megascans/Surfaces/Wall_Paint_sj0jecrc/MI_Wall_Paint_sj0jecrc_4K.MI_Wall_Paint_sj0jecrc_4K;
@@ -2402,7 +2403,7 @@ bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,
-MaterialInstanceConstant=
+MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 GeneralProjectSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 CryptoKeysSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
@@ -2537,26 +2538,26 @@ WorldPartitionRuntimeSpatialHash=
 StaticMesh=StaticMesh.LOD0.MeshBuildSettings,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/OurProject/Maps/Forest_Scene/Assets/trees/treemat
-MRUItem1=/Game/OurProject/Maps/Forest_Scene/ForestScene
-MRUItem2=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_rope
-MRUItem3=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/NewMaterial
-MRUItem4=/Game/FirstPerson/Maps/FirstPersonMap
-MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/books/red/closed_book_initialShadingGroup_BaseColor
-MRUItem6=/Game/OurProject/Maps/bedroom_scene/assets/books/green/closed_book_initialShadingGroup_BaseColor
-MRUItem7=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_initialShadingGroup_BaseColor1
-MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_brown
-MRUItem9=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red
-MRUItem10=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_initialShadingGroup_BaseColor
-MRUItem11=/Game/FirstPerson/Maps/_GENERATED/linch/M_Rectangle_C1164903_MI_English_Walnut_Parquet_udlxbgtl_4K_DCA5999346048737985276B0C993F4F8
-MRUItem12=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_green
-MRUItem13=/Game/FirstPerson/Maps/_GENERATED/linch/Rectangle_C1164903
-MRUItem14=/Game/Megascans/3D_Plants/Money_Plant_uchmfdyia/S_Money_Plant_uchmfdyia_Var6_lod1
-MRUItem15=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial1_4E7A8C6A4D10B029EAECAB95CDBE3C1F
-MRUItem16=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial_4E7A8C6A4D10B029EAECAB95CDBE3C1F
-MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial2_4E7A8C6A4D10B029EAECAB95CDBE3C1F
-MRUItem18=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial2
-MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/grunge_texture/NewMaterial1
+MRUItem0=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_base
+MRUItem1=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/M_hanging_pot_hanging_pot_base_DBE8757A4543DAF8976AA195994F18E7
+MRUItem2=/Game/OurProject/Maps/Forest_Scene/Assets/trees/treemat
+MRUItem3=/Game/OurProject/Maps/Forest_Scene/ForestScene
+MRUItem4=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_rope
+MRUItem5=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/NewMaterial
+MRUItem6=/Game/FirstPerson/Maps/FirstPersonMap
+MRUItem7=/Game/OurProject/Maps/bedroom_scene/assets/books/red/closed_book_initialShadingGroup_BaseColor
+MRUItem8=/Game/OurProject/Maps/bedroom_scene/assets/books/green/closed_book_initialShadingGroup_BaseColor
+MRUItem9=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_initialShadingGroup_BaseColor1
+MRUItem10=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_brown
+MRUItem11=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_red
+MRUItem12=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_initialShadingGroup_BaseColor
+MRUItem13=/Game/FirstPerson/Maps/_GENERATED/linch/M_Rectangle_C1164903_MI_English_Walnut_Parquet_udlxbgtl_4K_DCA5999346048737985276B0C993F4F8
+MRUItem14=/Game/OurProject/Maps/bedroom_scene/assets/books/closed_book_mat_green
+MRUItem15=/Game/FirstPerson/Maps/_GENERATED/linch/Rectangle_C1164903
+MRUItem16=/Game/Megascans/3D_Plants/Money_Plant_uchmfdyia/S_Money_Plant_uchmfdyia_Var6_lod1
+MRUItem17=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial1_4E7A8C6A4D10B029EAECAB95CDBE3C1F
+MRUItem18=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial_4E7A8C6A4D10B029EAECAB95CDBE3C1F
+MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMaterial2_4E7A8C6A4D10B029EAECAB95CDBE3C1F
 
 [AssetEditorToolkitTabLocation]
 /Game/LevelPrototyping/Materials/MI_Solid_Blue.MI_Solid_Blue=1
