--- a/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Serious_Games/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -134,7 +134,8 @@ CurrentPosGridSize=1
 LastLevel=/Game/FirstPerson/Maps/FirstPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/M_hanging_pot_hanging_pot_base_DBE8757A4543DAF8976AA195994F18E7.M_M_hanging_pot_hanging_pot_base_DBE8757A4543DAF8976AA195994F18E7
 OpenAssetsAtExit=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_base.hanging_pot_base
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
@@ -172,7 +173,7 @@ WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition
 Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -185,7 +186,7 @@ Actor="\"Object\" "
 MaterialEditorInstanceConstant="\"Object\" \"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
-MaterialInterface="\"Object\" "
+MaterialInterface="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 PreviewMaterial="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object\" \"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.TranslucencySelfShadowing.TranslucentMultipleScatteringExtinction\" \"Object.Lightmass.LightmassSettings\" "
 MaterialExpressionMaterialFunctionCall="\"Object\" "
@@ -1346,7 +1347,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 RecentsFiles=C:/Epic/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/Forest_Scene/Assets/trees
+ContentBrowserTab1.SelectedPaths=/Game/OurProject/Maps/bedroom_scene/assets/pot_plants
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.Locked=False
 ContentBrowserDrawer.FavoritesAreaExpanded=False
@@ -2399,11 +2400,10 @@ RecentlyPlaced=/Game/Megascans/3D_Assets/Worn_Plaster_Pot_ubylbdhiw/S_Worn_Plast
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,
-MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Surface Properties,MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.00 - Global,MaterialEditorInstanceConstant.ParameterGroups.01 - Albedo,MaterialEditorInstanceConstant.ParameterGroups.02 - Metallic,MaterialEditorInstanceConstant.ParameterGroups.03 - Specular,MaterialEditorInstanceConstant.ParameterGroups.04 - Roughness,MaterialEditorInstanceConstant.ParameterGroups.05 - Normal,MaterialEditorInstanceConstant.ParameterGroups.06 - SSS,MaterialEditorInstanceConstant.ParameterGroups.07 - Texture Maps,MaterialEditorInstanceConstant.ParameterGroups.Global Static Switch Parameter Values,
+MaterialInstanceConstant=
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 GeneralProjectSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
 CryptoKeysSettings=InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings,IOSRuntimeSettings.Build.Remote Build Options,
@@ -2638,9 +2638,10 @@ MRUItem19=/Game/OurProject/Maps/bedroom_scene/assets/bookshelf/M_bookshelf_NewMa
 /Game/OurProject/Maps/bedroom_scene/assets/books/green/closed_book_initialShadingGroup_BaseColor.closed_book_initialShadingGroup_BaseColor=1
 /Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_base.hanging_pot_base=1
 /Game/OurProject/Maps/bedroom_scene/assets/pot_plants/hanging_pot_rope.hanging_pot_rope=1
+/Game/OurProject/Maps/bedroom_scene/assets/pot_plants/M_hanging_pot_hanging_pot_base_DBE8757A4543DAF8976AA195994F18E7.M_M_hanging_pot_hanging_pot_base_DBE8757A4543DAF8976AA195994F18E7=1
 
 [MaterialInstanceEditor]
-bShowGrid=False
+bShowGrid=True
 bDrawGrid=False
 PrimType=1
 
